feat: Build Some Entity Classes (Step 06) completed