@@ -1,5 +1,6 @@
 package org.example;
 
+import org.example.db.Category;
 import org.example.db.Ingredient;
 import org.example.db.Recipe;
 import org.hibernate.Session;
@@ -7,6 +8,7 @@ import org.hibernate.SessionFactory;
 import org.hibernate.Transaction;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class Main {
     public static void main(String[] args) {
@@ -19,7 +21,10 @@ public class Main {
             session.persist(sugar);
             session.persist(apple);
 
-            Recipe applePie = new Recipe("Apple Pie", Arrays.asList(sugar, apple));
+            Category sweets = new Category("Sweets");
+            Category savoury = new Category("Savoury");
+
+            Recipe applePie = new Recipe("Apple Pie", Arrays.asList(sugar, apple), List.of(sweets));
             session.persist(applePie);
 
             transaction.commit();
